fix: added input story with all input elements to show contrast against surfaces

--- a/frontend/src/styles/base.scss
+++ b/frontend/src/styles/base.scss
@@ -396,6 +396,9 @@
     --bg-fill-secondary: var(--primitive-3000-25);
     --bg-fill-tertiary: var(--primitive-3000-50);
 
+    // A fill to always ensure contrast
+    --bg-fill-muted: color-mix(in oklab, var(--color-black) 10%, transparent);
+
     // Highlights
     --bg-fill-primary-highlight: color-mix(
         in oklab,
@@ -437,7 +440,6 @@
     // Inputs
     --bg-fill-input: var(--color-white);
     --bg-fill-switch: var(--primitive-neutral-cool-250);
-    --bg-fill-slider-rail: color-mix(in oklab, var(--color-black) 10%, transparent);
 
     // Content (text, icons)
     // //////////////////////////////////////////////////////////
@@ -822,6 +824,7 @@
     --bg-fill-primary: var(--primitive-neutral-cool-900);
     --bg-fill-secondary: var(--primitive-neutral-cool-850);
     --bg-fill-tertiary: var(--primitive-neutral-cool-800);
+    --bg-fill-muted: color-mix(in oklab, var(--color-white) 15%, transparent);
     --bg-fill-info-secondary: var(--color-blue-950);
     --bg-fill-info-tertiary: var(--color-blue-950);
     --bg-fill-warning-secondary: var(--color-yellow-950);
@@ -836,7 +839,6 @@
     --bg-fill-primary-highlight: color-mix(in oklab, var(--color-primary-950) 50%, transparent);
     --bg-fill-input: var(--primitive-neutral-cool-850);
     --bg-fill-switch: var(--primitive-neutral-cool-900);
-    --bg-fill-slider-rail: color-mix(in oklab, var(--color-white) 15%, transparent);
 
     // Content (text, icons) (dark mode)
     // //////////////////////////////////////////////////////////
